# orin

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
configs/: default.json  slm_earnings.json  slm_news.json
data/sample/: earnings.jsonl  filing.jsonl  macro.jsonl  news.jsonl
examples/: build_dataset.py  custom_reward.py  evaluate.py  train_basic.py  train_puffer.py  train_sb3.py
orin/: __init__.py  benchmark.py  callbacks.py  cli.py  config.py  curriculum.py
orin/data/: __init__.py  augment.py  edgar.py  generator.py  loaders.py  market.py  pipeline.py  sources.py
orin/envs/: __init__.py  base.py  earnings.py  filing.py  macro.py  news.py
orin/eval/: __init__.py  metrics.py
orin/rewards/: __init__.py  calibration.py  composite.py  directional.py  protocol.py  sharpe.py
orin/wrappers/: __init__.py  metadata.py  pufferlib.py  sb3.py  slm.py
results/: eval_fintext-earnings-v0.json  eval_fintext-filing-v0.json  eval_fintext-macro-v0.json  eval_fintext-news-v0.json  slm_earnings.json  slm_news.json
scripts/: train_agent.py  train_slm.py
tests/: test_data.py  test_envs.py  test_error_handling.py  test_generator.py  test_integration.py  test_market.py  test_pipeline.py  test_rewards.py  test_sb3_wrapper.py  test_slm_wrapper.py  test_wrappers.py
